crates/math-core/tests/snapshots/error_test__operatorname_with_begin.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\operatorname{\\begin{matrix}}"
---
Error: Could not extract text from the given macro.
   ╭─[ <input>:1:15 ]
   │
 1 │ \operatorname{\begin{matrix}}
   │               ───────┬──────  
   │                      ╰──────── could not extract text from this
───╯
